--- a/web_app_design/WEB_design/lab_task_2/question2/v1/index.html
+++ b/web_app_design/WEB_design/lab_task_2/question2/v1/index.html
@@ -3,69 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Main page</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<style>
-body {
-    background-color: #ededed;
-    color: #221c1c;
-    font-family: system-ui;
-    padding-left: 30px;
-    padding-right: 30px;
-    margin: 0 auto;
-    max-width: 800px;
-}
-
-.header {
-     display: flex;
-     font-family: system-ui;
-     padding: 20px;
-     border-bottom: 1px solid #88816f;
-}
-
-.logo {
-     border: 2px solid #88816f;
-     border-radius: 50%;
-     width: 150px;
-}
-
-.logo-title {
-     margin-left: 35px;
-     align-self: center;
-}
-
-.main {
-    display: flex;
-    margin-top: 20px;
-}
-
-#menu {
-    min-width: 200px;
-}
-
-.content {
-    margin-left: 20px;
-}
-
-*.menu-item {
-    display: block;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    text-decoration: none;
-    color: #201815;
-}
-
-.menu-item:hover {
-    background-color: #dddddd;
-}
-
-ul {
-    list-style-type: circle;
-}
-
-</style>
-
 <div class="header">
     <img src="images/Markus_gig_fellow.jpg" class="logo">
     <div class="logo-title">
@@ -99,5 +39,4 @@ ul {
     </div>
 </div>
 </body>
-
 </html>
